# moving_average

./: .gitignore  CMakeLists.txt  README.md  main.c  moving_average.c  moving_average.h  user_def.h
